fix: Header types equal spacing as like component between space

--- a/inc/assets/css/ast-builder-customizer.css
+++ b/inc/assets/css/ast-builder-customizer.css
@@ -206,6 +206,10 @@
 
 /*------------------------------------------------------------------------------------------------------------------*/
 
+#customize-control-astra-settings-header-sticky-link + #customize-control-astra-settings-header-transparant-link {
+    margin-top: 0;
+}
+
 /*controls.css*/
 .customize-control-astra_builder_control {
     border: 0 !important;
